# cursor-recipes

./: .env.example  .gitignore  agents.md  alembic.ini  conftest.py  cursor_review_codebase.md  impl notes & questions.md  pytest.ini  requirements.txt  setup.py  sprints.md
backend/: .env.example  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_config.py
backend/backups/backup_20260228_214601/: backup_info.json  recipe_tags.json  recipes.json  tags.json  users.json
backend/backups/test_with_alembic/: alembic_version.json  backup_info.json  recipe_tags.json  recipes.json  tags.json  users.json
backend/core/: config.py  security.py  supabase_client.py
backend/migrations/: env.py  run_migrations.py
backend/migrations/versions/: 0673160ee889_create_recipes_table.py  18a45e8a1d36_add_missing_recipe_columns.py  658fc5970371_create_users_table.py  6feb2cd74b06_add_recipe_counter_to_tags.py  7c9eda6571ed_create_tags_and_recipe_tags_tables.py  a1b2c3d4e5f6_create_llm_configs_table.py  add_nutrition_llm_config.py  add_recipe_from_image_llm_config.py  b0b11946c06a_make_category_non_nullable.py  c4aa69e3d4d9_add_category_to_tags.py  create_recipe_images_table.py  f2ed96f7b631_add_auto_increment_to_recipe_tags_id.py  ffdbe03389e8_update_llm_config_enum_values_to_.py  (+2 more)
backend/models/: __init__.py  recipe.py  user.py
backend/scripts/: README.md  backup_restore.sh  data_management.py  data_management.sh  db_backup_restore.py  populate_tags.py
backend/src/: main.py
backend/tests/: conftest.py  pytest.ini
backend/utils/: db.py  dependencies.py
(+157 files in other folders)
